# eigenix

./: Cargo.toml  LISCENCE  README.md  backend-module.nix  cli-module.nix  flake-module.nix  flake.nix  web-module.nix
backend/: .gitignore  Cargo.toml  README.md  backend.nix  build.rs
backend/src/: config.rs  db.rs  error.rs  kraken.rs  lib.rs  main.rs  metrics.rs
backend/src/exchanges/: bitcoin.rs  mod.rs
backend/src/metrics/: collector.rs  mod.rs  types.rs
backend/src/routes/: bitcoin.rs  kraken.rs  metrics.rs  mod.rs  monero.rs  trading.rs  wallets.rs
backend/src/services/: asb.rs  bitcoin.rs  kraken.rs  mod.rs  monero.rs
backend/src/trading/: config.rs  engine.rs  mod.rs
backend/src/wallets/: bitcoin.rs  manager.rs  mod.rs  monero.rs
backend/tests/: asb_integration.rs  bitcoin_wallet_integration.rs  kraken_integration.rs  monero_wallet_integration.rs  trading_engine.rs
backend/tests/common/: mod.rs
cli/: Cargo.toml
cli/src/: config.rs  main.rs
nix/: README.md  asb.nix  backend.nix  mempool.nix  module.nix  ports.nix  settings.json  settings.nix  test-runner.nix  web.nix
nix/templates/: mainnet.nix
scripts/: check-services.sh  test-api-endpoints.sh
web/: Cargo.toml  Dioxus.toml  build.rs  web.nix
web/assets/: main.css
web/src/: asb_metrics.rs  bitcoin_metrics.rs  constants.rs  electrs_metrics.rs  main.rs  monero_metrics.rs  routes.rs
web/src/api/: client.rs  kraken.rs  metrics.rs  mod.rs  trading.rs  wallets.rs
web/src/components/: charming_chart.rs  deposit_modal.rs  hero.rs  mod.rs  navbar.rs
web/src/components/dashboard/: mod.rs
web/src/components/dashboard/balance_display/: component.rs  mod.rs  style.css
web/src/components/dashboard/config_display/: component.rs  mod.rs  style.css
web/src/components/dashboard/health_status/: component.rs  mod.rs  style.css
web/src/components/dashboard/metrics/: mod.rs
web/src/components/dashboard/metrics/asb/: component.rs  style.css
web/src/components/dashboard/metrics/bitcoin/: component.rs  style.css
web/src/components/dashboard/metrics/monero/: component.rs  style.css
web/src/components/dashboard/status_display/: component.rs  mod.rs  style.css
web/src/components/header/: mod.rs
web/src/components/header/ticker/: component.rs  style.css
web/src/pages/: dashboard.rs  home.rs  metrics.rs  mod.rs  trading.rs  wallets.rs
web/src/types/: metrics.rs  mod.rs
