[workspace]
members = [
    "cli",
    "backend",
    "web",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Mo0nbase <gpggit.difficult148@passmail.net>"]
edition = "2021"

[workspace.dependencies]
# Shared dependencies across workspace
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
