[package]
name = "eigenix-backend"
version = "0.1.0"
authors = ["Eigenix Contributors"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
axum = "0.8.6"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
surrealdb = "2.3.10"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22.1"
clap = { version = "4.5.51", features = ["derive"] }
toml = "0.9.8"
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
