[package]
name = "eigenix-cli"
version = "0.1.0"
authors = ["Eigenix Contributors"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.11"
colored = "2.1"
