[package]
name = "web"
version = "0.1.0"
authors = ["Mo0nbase <gpggit.difficult148@passmail.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "=0.2.104"
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-logger = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "=0.3.81", features = ["Window", "Storage", "HtmlElement", "HtmlCanvasElement", "CanvasRenderingContext2d"] }
reqwest = { version = "0.12.24", features = ["json"] }
gloo-net = { version = "0.6.0", features = ["json"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
