[package]
name = "web"
version = "0.1.0"
authors = ["Mo0nbase <gpggit.difficult148@passmail.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "=0.2.104"
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-logger = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "=0.3.81", features = ["Window", "Storage", "HtmlElement", "HtmlCanvasElement", "CanvasRenderingContext2d", "Navigator", "Clipboard"] }
reqwest = { version = "0.12.24", features = ["json"] }
gloo-net = { version = "0.6.0", features = ["json"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
charming = { version = "0.6.0", features = ["wasm"] }
chrono = "0.4"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
